membenahi debugging pada page login

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <title>Fora | Food Rate</title>
+    <link rel="stylesheet" href="icon">
   </head>
   <body>
     <header id="navbar"></header>
