--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
     <title>Fora | Food Rate</title>
   </head>
   <body>
+    <a href="#" class="skip-to-content" onclick="document.getElementById('main-content').focus(); return false;">Lewati ke konten utama</a> 
     <header id="navbar"></header>
-    <main id="main-content"></main>
+    <main id="main-content" tabindex="-1"></main>
   </body>
 </html>
