menambahkan folder dist dan menambahkan style di login page

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,15 @@
     <title>Fora | Food Rate</title>
   </head>
   <body>
-    <a href="#" class="skip-to-content" onclick="document.getElementById('main-content').focus(); return false;">Lewati ke konten utama</a> 
-    <header id="navbar"></header>
+    <a
+      href="#"
+      class="skip-to-content"
+      onclick="document.getElementById('main-content').focus(); return false;"
+      >Lewati ke konten utama</a
+    >
+    <header>
+      <div id="navbar"></div>
+    </header>
     <main id="main-content" tabindex="-1"></main>
   </body>
 </html>
