menambahkan css pada form login, memperbarui logic pada register, menambahkan file css untuk register

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
     <header>
       <div id="navbar"></div>
     </header>
-    <main id="main-content" tabindex="-1"></main>
+    <main>
+      <div id="main-content" tabindex="-1"></div>
+    </main>
   </body>
 </html>
